--- a/CQRS.Api/appsettings.Development.json
+++ b/CQRS.Api/appsettings.Development.json
@@ -1,8 +1,19 @@
+
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft": "Warning",
+  //    "Microsoft.Hosting.Lifetime": "Information"
+  //  },
+  //  "Console": {
+  //    "IncludeScopes": true
+  //  },
+  //  "File": {
+  //    "Path": "C:\\Amauri\\GitHub\\logs\\log-.txt",
+  //    "LogLevel": {
+  //      "Default": "Information"
+  //    }
+  //  }
+  //}
 }
