--- a/CQRS.Aplicacao/CQRS.Aplicacao.csproj
+++ b/CQRS.Aplicacao/CQRS.Aplicacao.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="IronPdf" Version="2025.6.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+    <PackageReference Include="Scrutor" Version="6.1.0" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
